--- a/src/components/subway/ttc-line-1.module.css
+++ b/src/components/subway/ttc-line-1.module.css
@@ -1,14 +1,64 @@
 li.line {
-    border-color: #f8c300;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    min-height: 64px;
+}
+
+ul.line {
+    margin: 0;
+    padding: 0;
+}
+
+.dot {
+    position: absolute;
+    border-radius: 50%;
     border-style: solid;
+    border-color: black;
+    border-width: 2px;
+    background-color: white;
+    width: 18px;
+    height: 18px;
+    margin-top: 4px;
+    margin-left: 4px;
+}
+
+.dotBgStart {
+    border-radius: 50% 50% 0% 0%;
+    border-style: solid;
+    border-color: #f8c300;
+    background-color: #f8c300;
+    width: 24px;
+    height: 24px;
+}
+
+.dotBgStart2 {
+    border-color: #f8c300;
+    background-color: #f8c300;
     height: 100%;
 }
 
-li.dot {
-    border-radius: 50%;
-    background-color: red;
+.dotBgEnd {
+    border-radius: 0% 0% 50% 50%;
     border-style: solid;
-    border-color: black;
-    width: 64px;
-    height: 64px;
+    border-color: #f8c300;
+    background-color: #f8c300;
+    width: 24px;
+    height: 24px;
+}
+
+.dotBg {
+    border-style: solid;
+    border-color: #f8c300;
+    background-color: #f8c300;
+    width: 24px;
+    height: 100%;
+}
+
+.lineItem {
+    margin-top: 6px;
+    margin-left: 12px;
 }
